# krytn_cafe

./: package.xml  setup.cfg  setup.py
.github/workflows/: build.yml
config/: dds_router.yaml  dds_router_krytn.yaml  dds_router_windows.yaml  diff_drive_controller.yaml  nav2_params.yaml  perception.yaml  real_world_diff_drive.yaml  rtabmap.yaml  slam_toolbox_sync.yaml
krytn_cafe/: my_node.py
launch/: cafe_world.launch.py  control_launch.py  diffbot.launch.py  empty_world.launch.py  hello.launch.py  joy_launch.py  krytn_bringup_launch.py  magni_bringup_launch.py  map_and_nav_launch.py  mapping.launch.py  navigation_launch.py  perception.launch.py  perception_launch.py  spawn_krytn.launch.py  test.launch.py
models/krytn/: krytn.gazebo.xacro  krytn.sdf  krytn.xacro.urdf  krytn_real.xacro.urdf  model.config
scripts/: krytn.service  krytn_bringup.sh  magni.service  magni_bringup.sh
worlds/: cafe.world
