<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>krytn_cafe</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="badwolf.johnnyv@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
